--- a/Ejercicios/Ejercicio4/Ejercicio4/styles.css
+++ b/Ejercicios/Ejercicio4/Ejercicio4/styles.css
@@ -1,3 +1,9 @@
+table{
+    border-collapse: collapse;
+}
 td{
+    padding: 10px;
     border: 1px solid black;
+    text-align: center;
+    width: 75px;
 }
