--- a/Ejercicios/PracticaExamen/styles.css
+++ b/Ejercicios/PracticaExamen/styles.css
@@ -1,7 +1,7 @@
 table{
     border-collapse: collapse;
-    width: 400px;
-    height: 250px;
+    width: 100%;
+    height: 50%;
 }
 td{
     border: 1px solid #000;
