--- a/Ejercicios/CSS/Ej1/styles.css
+++ b/Ejercicios/CSS/Ej1/styles.css
@@ -36,3 +36,8 @@ img {
 .FondoAzul{
     background-color: blue;
 }
+div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
