--- a/Ejercicios/Dual/Dokkan Characters/styles.css
+++ b/Ejercicios/Dual/Dokkan Characters/styles.css
@@ -56,7 +56,7 @@ table {
 .nav_img img{
     margin: 50px 0 60px 0;
     width: 50%;
-    min-width: 320px ;
+    min-width: 320px;
 }
 .separator{
     position: absolute;
@@ -82,6 +82,7 @@ table {
     padding: 10px 20px;
     background-image: url('media/img_4.png');
     background-size: contain;
+    position: relative;
 }
 
 .form-group{
@@ -118,4 +119,23 @@ table {
     margin: 20px;
     padding: 0;
     color: white;
+}
+.form_footer{
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+}
+.nav_img a{
+    color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 50px 0 60px 0;
+    width: 50%;
+    min-width: 320px;
 }
