--- a/Ejercicios/Dual/Dokkan Characters/styles.css
+++ b/Ejercicios/Dual/Dokkan Characters/styles.css
@@ -1,34 +1,12 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
 img {
     width: 100%;
 }
 
 body {
+    font-family: "Helvetica Neue", "Helvetica Neue 97 Condensed Black Oblique", Helvetica, Arial, sans-serif;
+    font-weight: 900;
+    color: white;
+    font-style: oblique;
     line-height: 1;
     background: url('media/img_3.png') no-repeat center center fixed;
     background-size: cover;
@@ -37,14 +15,6 @@ body {
 ol, ul {
     list-style: none;
 }
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -52,6 +22,12 @@ table {
 .container-fluid{
     position: relative;
     padding: 0 !important;
+}
+.nav{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin: 0;
 }
 .nav{
     background: url("media/img_2.png") no-repeat;
@@ -64,15 +40,16 @@ table {
     color: white;
 }
 .top{
-    margin: 22px 0 0 13px;
+    margin: 6px 0 0 13px;
     width: 64px;
     height: 65px;
 }
-.catalogo{
-    margin: 41px 0 0 13px;
-    width: 100px;
+.portada_img{
+    border-radius: 0 0 300px 300px;
+    box-shadow: 0 0 10px 10px black;
 }
 .separator{
+    visibility: hidden;
     position: absolute;
     bottom: -32px;
     left: 0;
