--- a/Ejercicios/Dual/Dokkan Characters/stylesCatalogo.css
+++ b/Ejercicios/Dual/Dokkan Characters/stylesCatalogo.css
@@ -1,5 +1,78 @@
 body{
+    font-family: "Helvetica Neue", "Helvetica Neue 97 Condensed Black Oblique", Helvetica, Arial, sans-serif;
+    font-weight: 900;
+    font-style: oblique;
+    color: white;
     line-height: 1;
     background: url('media/img_3.png') no-repeat center center fixed;
     background-size: cover;
+}
+.header h1{
+    text-align: center;
+    margin: 0;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.nav{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin: 0;
+}
+.catalogo{
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: url('media/img_4.png') repeat;
+    background-size: contain;
+    position: relative;
+    margin: auto;
+    width: 60%;
+}
+.personaje{
+    padding: 0;
+    width: 29%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+.personaje h2{
+    text-align: center;
+}
+.personaje img {
+    width: 50%;
+}
+.nav{
+    background: url("media/img_2.png") no-repeat;
+    margin: 60px auto;
+    width: 960px;
+    height: 104px;
+}
+.top{
+    margin: 6px 0 0 -27px;
+    width: 64px;
+    height: 65px;
+}
+ul{
+    list-style: none;
+}
+.side_img{
+
+}
+.form_footer{
+    width: 100%;
+    position: absolute;
+    bottom: -5px;
+    right: 0;
+}
+.form_footer_up{
+    width: 100%;
+    rotate: 180deg;
+    position: absolute;
+    top: -5px;
+    right: 0;
 }
